k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy2shop-service
spec:
  type: NodePort
  selector:
    app: easy2shop
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
