k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy2shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: easy2shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy2shop-service
                port:
                  number: 5000
